# daily-todo

./: .gitignore  README.md  cli.py  env.example  llm.py  main.py  pyproject.toml  storage.py
.github/workflows/: publish-pypi.yml
